--- a/index.html
+++ b/index.html
@@ -8,53 +8,49 @@
 </head>
 <body>
     <div class="header">
-        <p>Информационный сайт</p>
+        <p>Интерактивный сайт</p>
     </div>
     <div class="title">
-        <h1>Это информатика и это не сложно</h1>
+        <h1>Это информатика, <br> и это несложно</h1>
     </div>
     <div class="main">
         <h1>Курс для подготовки к ЕГЭ для 10-х классов.</h1>
     </div>
     <div class="content">
         <h1>
-            <a href="переходник 1.html">
+            <a href="переходник 1.html" class="one">
                 <img class="img" src="img/миникэт.jpg" alt="Excel">
-                <h3>Краткая обобщенная теория</h3>
-                <p></p>
+                <h3 class="one1">Краткая обобщенная теория</h3>
             </a>
         </h1>
         <h1>
-            <a href="переходник 2.html">
+            <a href="переходник 2.html" class="two">
                 <img class="img" src="img/миникэт2.jpg" alt="Python">
-                <h3>Основа электронных таблиц - Excel</h3>
-                <p></p>
+                <h3 class="two2">Основа электронных таблиц - Excel</h3>
             </a>
         </h1>
         <h1>
-            <a href="переходник 3.html">
+            <a href="переходник 3.html" class="three">
                 <img class="img" src="img/миникэт.jpg" alt="">
-                <h3>Базовое программирование в Python</h3>
-                <p></p>
+                <h3 class="three3">Базовое программирование в Python</h3>
             </a>
         </h1>
         <h1>
-            <a href="переходник 4.html">
+            <a href="переходник 4.html" class="four">
                 <img class="img" src="img/миникэт2.jpg" alt="Алгоритмы">
-                <h3>Правила составления алгоритмов</h3>
-                <p></p>
+                <h3 class="four4">Правила составления алгоритмов</h3>
             </a>
         </h1>
         <h1>
-            <a href="переходник 5.html">
+            <a href="переходник 5.html" class="five">
                 <img class="img" src="img/миникэт.jpg" alt="Система счисления">
-                <h3>Кратко о системах счисления</h3>
-                <p></p>
+                <h3 class="five5">Кратко о системах счисления</h3>
             </a>
         </h1>
     </div>
     <div class="footer">
-        
+        <p>Проект Шанина Эльвира <b>Ⓡ</b></p>
+        <p> </p>
     </div>
 </body>
 </html>
