--- a/переходник 1.html
+++ b/переходник 1.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style for переходник.css">
 </head>
 <body>
+    <div class="h">
+        <button onclick="history.back()">Назад</button>
+    </div>
     <header>
         <h1 class="header">Краткая обобщенная <br> теория</h1>
     </header>
+    <div class="img"></div>
     <main>
         <h1>Основные понятия</h1>
         <h2>Что такое информатика</h2>
@@ -54,5 +58,29 @@
             <li>4.Тестирование и отладка</li>
         </ol>
     </main>
+    <footer>
+        <div class="content">
+            <p>
+                <a href="переходник 2.html" class="two">
+                    <h3 class="two2">Основа электронных таблиц - Excel</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 3.html" class="three">
+                    <h3 class="three3">Базовое программирование в Python</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 4.html" class="four">
+                    <h3 class="four4">Правила составления алгоритмов</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 5.html" class="five">
+                    <h3 class="five5">Кратко о системах счисления</h3>
+                </a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
