--- a/переходник 2.html
+++ b/переходник 2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <button class="back-button" onclick="history.back()">⬅️ Назад</button>
+        <button class="back-button" onclick="history.back()">Назад</button>
     </nav>
     <header>
         <h1 class="header">Основа электронных таблиц<br>
@@ -86,5 +86,24 @@
         <h2>Итог</h2>
         <img src="img/код excel 2.png" alt="итог">
     </main>
+    <footer>
+        <div class="content">
+            <p>
+                <a href="переходник 3.html" class="three">
+                    <h3 class="three3">Базовое программирование в Python</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 4.html" class="four">
+                    <h3 class="four4">Правила составления алгоритмов</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 5.html" class="five">
+                    <h3 class="five5">Кратко о системах счисления</h3>
+                </a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
