--- a/переходник 3.html
+++ b/переходник 3.html
@@ -9,25 +9,25 @@
 <body>
     <header>
         <nav>
-            <button class="back-button" onclick="history.back()">⬅️ Назад</button>
+            <button class="back-button" onclick="history.back()">Назад</button>
         </nav>
         <h1 class="header">Базовое программирование <br>
             в Python
         </h1>
     </header>
     <main>
-        <h1>Понятие python</h1>
+        <h1 class="h">Понятие python</h1>
         <p>Python - это язык программирования. Как любой язык программирования он
             устроен как некая последовательность команд, которые выполняются и приводят к
             какому-то результату.</p>
-        <h1>Основные виды ошибок</h1>
+        <h1 class="h">Основные виды ошибок</h1>
         <p>
             Синтаксические — допущены ошибки в написании кода. <br>
             Логические — программа работает, но результат неправильный. <br>
             Время выполнения — программа зацикливается или работает очень медленно.
         
         </p>
-        <h1>Основные команды</h1>
+        <h1 class="h">Основные команды</h1>
         <h2>Переменные и типы данных</h2>
         <h4>Что такое переменная?</h4>
         <p>Переменная – участок памяти в компьютере, который что-то хранит. Чтобы создать переменную, нужно придумать имя, а затем присвоить значение этому имени:
@@ -55,9 +55,9 @@
         <p>Аргумент, который уточняет, какой знак будет выведен между значениями.</p>
         <h4>Аргумент end</h4>
         <p>Аргумент, который уточняет, какой знак будет выведен в конце выполнения всей функции print.</p>
-        <h1>Форматирование строк</h1>
+        <h1 class="h">Форматирование строк</h1>
         <img src="img/cGMOwtZq6X5CIRxfP8bA7.png" alt="Обобщение Форматирований">
-        <h1>Математика в Python</h1>
+        <h1 class="h">Математика в Python</h1>
         <h3>Сложение, вычитание и умножение</h3>
         <p>С целыми числами можно выполнять арифметические операции: <b>сложение (+)</b>, <b>вычитание (-)</b>,<b> умножение (*)</b>,<b> вычисление неполного частного (//)</b>,<b> вычисление остатка (%)</b>,<b> возведение в степень (**)</b>. </p>
         <h2>Основные функции с числами</h2>
@@ -80,7 +80,7 @@
                 1.2
             </h4>
         </p>
-        <h1>Простые и вложенные условия </h1>
+        <h1 class="h">Простые и вложенные условия </h1>
         <h3>Операции сравнения</h3>
         <p>С помощью операций сравнения <b>== (равно)</b>, <b>!= (не равно)</b>, <b> >(больше)</b>,<b> < (меньше)</b>,<b> >= (больше или равно)</b>,<b> <= (меньше или равно)</b> можно записать условие. Знаки > и < всегда стоят перед =.</p>
         <h3>Простые условия</h3>
@@ -198,5 +198,24 @@
             s.info()
         </h4>
     </main>
+    <footer>
+        <div class="content">
+            <p>
+                <a href="переходник 2.html" class="two">
+                    <h3 class="two2">Основа электронных таблиц - Excel</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 4.html" class="four">
+                    <h3 class="four4">Правила составления алгоритмов</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 5.html" class="five">
+                    <h3 class="five5">Кратко о системах счисления</h3>
+                </a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
