--- a/переходник 4.html
+++ b/переходник 4.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style for переходник4.css">
 </head>
 <body>
+    <nav>
+        <button class="back-button" onclick="history.back()">Назад</button>
+    </nav>
     <header>
         <h1 class="header">Правила составления алгоритмов</h1>
     </header>
@@ -68,5 +71,24 @@
         <img src="img/код excel 3.png" alt=""> <br>
         <img src="img/код excel 4.png" alt="">
     </main>
+    <footer>
+        <div class="content">
+            <p>
+                <a href="переходник 2.html" class="two">
+                    <h3 class="two2">Основа электронных таблиц - Excel</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 3.html" class="three">
+                    <h3 class="three3">Базовое программирование в Python</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 5.html" class="five">
+                    <h3 class="five5">Кратко о системах счисления</h3>
+                </a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
