--- a/переходник 5.html
+++ b/переходник 5.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <nav>
+            <button class="back-button" onclick="history.back()">Назад</button>
+        </nav>
         <div class="container">
             <h1 class="header">Кратко о системах счисления</h1>
         </div>
@@ -34,12 +37,12 @@
         <h1>Перевод чисел из десятичной системы в другую</h1>
         <h2>Алгоритм</h2>
         <p>Чтобы перевести десятичное число в систему с основанием b:</p>
-        <il>
+        <ol>
             <li>Делим число на b, запоминаем остаток — он будет цифрой в новом числе.</li>
             <li>Делим частное снова на b, снова запоминаем остаток.</li>
             <li>Повторяем, пока частное не станет 0.</li>
             <li>Число в новой системе — это остатки, прочитанные в обратном порядке.</li>
-        </il>
+        </ol>
         <h2>Пример: перевод 156 в двоичную</h2>
         <p>
         156 / 2 = 78, остаток 0 <br>
@@ -64,5 +67,24 @@
             Очень удобно для представления байтов (например, 0xFF = 255).
         </p>
     </main>
+    <footer>
+        <div class="content">
+            <p>
+                <a href="переходник 2.html" class="two">
+                    <h3 class="two2">Основа электронных таблиц - Excel</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 3.html" class="three">
+                    <h3 class="three3">Базовое программирование в Python</h3>
+                </a>
+            </p>
+            <p>
+                <a href="переходник 4.html" class="four">
+                    <h3 class="four4">Правила составления алгоритмов</h3>
+                </a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
